--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@
 }
 
 .filter-container {
+    display: none;
+
     flex: 1;
     padding-left: 1rem;
     padding-right: 1rem;
@@ -98,8 +100,15 @@
 }
 
 .image-container {
+    display: none;
+
     flex: 1.5;
     background-color: antiquewhite;
+}
+
+#selected-image {
+    width: 100%;
+    height: 100%;
 }
 
 .action-buttons-container {
@@ -119,6 +128,7 @@
     border: solid gray 2px;
 }
 #choose-button {
+    display: block;
     background-color: gray;
     color: white;
     margin-right: 1rem;
