--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 .box-container {
     position: absolute;
     width: 50%;
+    height: max-content ;
     left: 25%;
     top: 25%;
 }
@@ -123,6 +124,7 @@
 #selected-image {
     width: 100%;
     height: 100%;
+
 }
 
 .action-buttons-container {
